2002-06-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataGridColumn.cs:
	* DataGridPagerStyle.cs:
	* DataList.cs:
	* DataListItem.cs:
	* Image.cs:
	* LinkButton.cs:
	* ListControl.cs:
	* ListItem.cs:
	* ListItemCollection.cs:
	* Repeater.cs:
	* ServerValidateEventArgs.cs:
	* Style.cs:
	* TableRow.cs:
	* WebControl.cs:
	* Xml.cs: more class status page based changes.

2002-06-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Button.cs:
	(.ctor): fixed to render the correct tag.
	(IPostBAckEventHandler.RaisePostBackEvent): fixed.

2002-06-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebControl.cs:
	(AddAttributesToRender): call Page.VerifyRenderingInServerForm. All
	WebControl derived classes should be rendered inside a HtmlForm.

2002-06-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Repeater.cs: implemented CreateControlHierarchy. Fixed some event
	processing methods.

2002-06-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButtonList.cs: implemented IRepeatInfoUser.RenderItem.
	* RepeatInfo.cs: implemented DoHorizontalRendering.

2002-06-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Web.UI.WebControls/Repeater.cs:
	(Controls):
	(OnDataBinding): fixed stack overflow.

2002-06-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RadioButtonList.cs: implemented IRepeatInfoUser.RenderItem.
	* RepeatInfo.cs: implemented DoHorizontalRendering.

2002-06-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebControl.cs:
	(CopyBaseAttributes): copy Attributes and don't throw exception.

2002-06-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListBox.cs: mono-stylized.
	(AddAttributesToRender): call parent class method.

2002-06-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Style.cs: fixed IsEmpty and Width.

	* Table.cs: mono-stylized.
	(TableRowControlCollection.AddAt): fixed.
	(AddAttributesToRender): fixed.
	
	* TableCell.cs: mono-stylized.
	(.ctor): use PreventAutoID.
	(AddAttributesToRender): fixed.