@@ -1,3 +1,8 @@
+
+Mon Jul 1 16:23:15 CEST 2002 Paolo Molaro <lupus@ximian.com>
+
+	* Style.cs, TableRow.cs, DataListItem.cs: fix compilation.
+
 2002-06-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* DataGridColumn.cs:
